two fragments added

--- a/app/src/main/res/layout/fragment_gcode_text.xml
+++ b/app/src/main/res/layout/fragment_gcode_text.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment"
-        android:id="@+id/source_text"
+        android:id="@+id/gcode_view_text"
     />
 
 </FrameLayout>
