--- a/app/src/main/res/layout/fragment_gcode_text.xml
+++ b/app/src/main/res/layout/fragment_gcode_text.xml
@@ -6,11 +6,12 @@
     tools:context="ru.android_cnc.acnc.GcodeTextFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment"
         android:id="@+id/gcode_view_text"
+        android:inputType="textUri|textMultiLine"
     />
 
 </FrameLayout>
