--- a/app/src/main/res/layout/fragment_gcode_text.xml
+++ b/app/src/main/res/layout/fragment_gcode_text.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:configChanges="orientation|screenSize"
     tools:context="ru.android_cnc.acnc.GcodeTextFragment">
 
     <EditText
