--- a/app/src/main/res/layout/fragment_gcode_graph_view.xml
+++ b/app/src/main/res/layout/fragment_gcode_graph_view.xml
@@ -3,13 +3,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ru.android_cnc.acnc.GcodeGraphViewFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-    />
-
+    tools:context="ru.android_cnc.acnc.GraphView.GcodeGraphViewFragment">
 </FrameLayout>
