--- a/app/src/main/res/layout/fragment_cnccontrol.xml
+++ b/app/src/main/res/layout/fragment_cnccontrol.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     tools:context="ru.android_cnc.acnc.GraphView.CNCControlFragment">
 
     <!-- TODO: Update blank fragment layout -->
