--- a/app/src/main/res/layout/fragment_gcode_graph_view.xml
+++ b/app/src/main/res/layout/fragment_gcode_graph_view.xml
@@ -6,7 +6,7 @@
     tools:context="ru.android_cnc.acnc.GraphView.GcodeGraphViewFragment">
     <ru.android_cnc.acnc.GraphView.GcodeGraphView
         android:id="@+id/gcode_graph_view"
-        android:background="#ccc"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
     />
