--- a/app/src/main/res/layout/fragment_cnccontrol.xml
+++ b/app/src/main/res/layout/fragment_cnccontrol.xml
@@ -9,11 +9,95 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@android:color/black"
     tools:context="ru.android_cnc.acnc.GraphView.CNCControlFragment"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="11">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" X "
+                android:background="#ff000000"
+                android:id="@+id/text_label_X" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:background="#ffffffff"
+                android:id="@+id/text_value_X"
+                android:layout_weight="1"
+                android:textAlignment="center" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" Y "
+                android:background="#ff000000"
+                android:id="@+id/text_label_Y" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:background="#ffffffff"
+                android:id="@+id/text_value_Y"
+                android:layout_weight="1"
+                android:textAlignment="center" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" Z "
+                android:background="#ff000000"
+                android:id="@+id/text_label_Z" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:background="#ffffffff"
+                android:id="@+id/text_value_Z"
+                android:layout_weight="1"
+                android:textAlignment="center" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="10">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="START"
+            android:id="@+id/button_start"
+            android:layout_weight="1"
+            android:enabled="true"
+            android:elegantTextHeight="false"
+            android:clickable="true"
+            android:background="#ffff0000"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:onClick="onStartButtonClick" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="STOP"
+            android:id="@+id/button_stop"
+            android:layout_weight="1"
+            android:background="#ff00ff00"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:clickable="true"
+            android:onClick="onStopButtonClick"/>
+     </LinearLayout>
 
 </LinearLayout>
