--- a/app/src/main/res/layout/fragment_cnc_2d_view.xml
+++ b/app/src/main/res/layout/fragment_cnc_2d_view.xml
@@ -1,6 +1,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/gcode_graph_view_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ru.android_cnc.acnc.GraphView.CNC2DViewFragment">
