--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#FFFFFF</color>
-    <color name="toolbar_orange">#FF9B00</color>
-    <color name="status_bar_orange">#F67C01</color>
-    <color name="sliding_menu_color">#FAFAFA</color>
+    <color name="juice_orange">#FF9B00</color>
+    <color name="dark_orange">#F67C01</color>
+    <color name="light_gray">#FAFAFA</color>
     <color name="symbol_black">#262626</color>
-    <color name="company_name_gray">#696969</color>
-    <color name="main_background_gray">#F4F4F4</color>
-    <color name="price_green">#4CAF50</color>
-    <color name="status_bar_green">#388E3C</color>
-    <color name="price_red">#F44336</color>
-    <color name="status_bar_red">#D32F2F</color>
+    <color name="dark_gray">#696969</color>
+    <color name="background_gray">#F4F4F4</color>
+    <color name="grass_green">#4CAF50</color>
+    <color name="dark_green">#388E3C</color>
+    <color name="carrot_red">#F44336</color>
+    <color name="dark_red">#D32F2F</color>
     <color name="refresh_progress_1">#FFC107</color>
     <color name="refresh_progress_2">#FFA000</color>
     <color name="refresh_progress_3">#FF9800</color>
