--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="white">#FFFFFF</color>
     <color name="juice_orange">#FF9B00</color>
     <color name="dark_orange">#F67C01</color>
+    <color name="transparent_light_gray">#AAAAAAAA</color>
     <color name="light_gray">#FAFAFA</color>
     <color name="symbol_black">#262626</color>
     <color name="dark_gray">#696969</color>
